tests/baselines/reference/derivedClassSuperCallsInNonConstructorMembers.errors.txt
==== tests/cases/compiler/derivedClassSuperCallsInNonConstructorMembers.ts (13 errors) ====
    // error to use super calls outside a constructor
    
    class Base {
        x: string;
    }
    
    class Derived extends Base {
        a: super();
           ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(8,8): error TS1006: Identifier expected; 'super' is a keyword.
           ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(8,8): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        b() {
            super();
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(10,9): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
        get C() {
            super();
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(13,9): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return 1;
        }
        set C(v) {
            super();
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(17,9): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    
        static a: super();
                  ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(20,15): error TS1006: Identifier expected; 'super' is a keyword.
                  ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(20,15): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        static b() {
            super();
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(22,9): error TS2089: Calls to 'super' are only valid inside a class.
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(22,9): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
        static get C() {
            super();
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(25,9): error TS2089: Calls to 'super' are only valid inside a class.
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(25,9): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
            return 1;
        }
        static set C(v) {
            super();
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(29,9): error TS2089: Calls to 'super' are only valid inside a class.
            ~~~~~
!!! derivedClassSuperCallsInNonConstructorMembers.ts(29,9): error TS2106: Super calls are not permitted outside constructors or in nested functions inside constructors.
        }
    }